# pico-dht22

./: CMakeLists.txt  LICENSE  Makefile  README.md  dht22-pico.c
src/: dht22-pico.c  dht22-pico.h  main.c
